<resources>
    <string name="app_name">奇迹秀</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="tencent_tls_ui_independentLoginTitle">用户名登录</string>
    <string name="tencent_tls_ui_independentRegisterTitle">用户名注册</string>
    <string name="action_settings">settings</string>
    <string name="btn_take_photo">拍照</string>
    <string name="btn_pic_photo">从手机相册选择</string>
    <string name="btn_return_home">返回首页</string>
    <string name="btn_return">返回</string>
    <string name="btn_save">保存</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_refuse">拒绝</string>
    <string name="btn_agree">同意</string>
    <string name="btn_sure">确定</string>
    <string name="btn_close">关闭</string>
    <string name="error_code_prefix">错误码：</string>
    <string name="activity_login_login">登录</string>
    <string name="activity_login_phone_login">手机号登录</string>
    <string name="activity_login_normal_login">用户名登录</string>
    <string name="activity_login_register">注册新用户</string>
    <string name="activity_login_guest_login">游客模式</string>
    <string name="activity_login_username">用户名</string>
    <string name="activity_login_verify_code">获取验证码</string>
    <string name="activity_login_verify_code_edit">验证码</string>
    <string name="activity_login_phone_num">手机号</string>
    <string name="activity_login_password">密码</string>
    <string name="activity_register_phone_register">手机注册</string>
    <string name="activity_register_normal_register">用户名注册</string>
    <string name="activity_register_register">注册</string>
    <string name="activity_register_username">用户名(4~24位字母、数字、下划线)</string>
    <string name="activity_register_password">密码(8~16位个字符)</string>
    <string name="activity_register_password_verify">确认密码</string>
    <string name="activity_register_phone_num">手机号</string>
    <string name="activity_register_verify_code">验证码</string>
    <string name="activity_register_return">返回</string>
    <string name="float_window_not_allow">悬浮窗权限未开启 请在应用-权限中打开悬浮窗权限</string>
    <string name="dialog_input_text_hint">和大家说点什么吧</string>
    <string name="dialog_selectSex">请选择</string>
    <string name="live_unknown">不显示地理位置</string>
    <string name="live_titile">最新直播</string>
    <string name="video_list_empty">没有视频</string>
    <string name="activity_publish_beauty">美颜效果</string>
    <string name="activity_publish_white">美白效果</string>
    <string name="send">发送</string>
    <string name="invite_dialog_tips">主播邀请您与他进行互动直播</string>
    <string name="live_end_ask_tips">确定结束直播?</string>
    <string name="live_end_tips">直播结束啦!</string>
    <string name="live_time_tips">直播时长</string>
    <string name="live_members_tips">观看人数</string>
    <string name="live_admires_tips">获赞数量</string>
    <string name="live_report_tips">请选择您的举报原因</string>
    <string name="live_report_dirty">垃圾营销</string>
    <string name="live_report_false">不实信息</string>
    <string name="live_report_virus">有害信息</string>
    <string name="live_report_illegal">违法信息</string>
    <string name="live_report_yellow">淫秽信息</string>
    <string name="live_host_leave">主播可能暂时离开</string>
    <string name="live_btn_par">par</string>
    <string name="live_btn_record">录制</string>
    <string name="live_btn_push">开启推流</string>
    <string name="live_btn_stop_push">关闭推流</string>
    <string name="live_btn_stop_record">停录</string>
    <string name="clip_title">点击地址复制到黏贴版</string>
    <string name="clip_tip">地址复制到黏贴版上了</string>
    <string name="private_mode_off">隐私模式已关闭</string>
    <string name="private_mode_on">隐私模式已开启</string>
    <string name="userinfo_title">编辑个人信息</string>
    <string name="userinfo_head">头像</string>
    <string name="userinfo_nickname">昵称</string>
    <string name="userinfo_sex">性别</string>
    <string name="userinfo_cover">直播封面</string>
    <string name="userinfo_sign">签名</string>
    <string name="userinfo_sex_female">女</string>
    <string name="userinfo_sex_male">男</string>
    <string name="app_about">关于我们</string>
    <string name="app_set">编辑个人信息</string>
    <string name="btn_login_out">退出登录</string>
    <string name="tip_force_offline">您的帐号已在其它地方登录</string>
    <string name="set_live_animator">渐隐动画</string>
    <string name="set_log_level">日志等级</string>
    <string name="set_sdk_version">SDK版本</string>
    <string name="edit_error">修改失败</string>
    <string name="publish_already_launch_avRoom">wait!</string>
    <string name="publish_photo_take">拍照</string>
    <string name="publish_photo_album">相册</string>
    <string name="publish_need_photo_tips">从未发起过图片，请选择一张作为直播封面</string>
    <string name="publish_wait_uploading">请等待封面上传完成</string>
    <string name="publish_upload_success">上传封面成功</string>
    <string name="publish_photo_make_sure_tips">请添加一张照片</string>
    <string name="publish_photo_make_sure_title">请输入图片标题</string>
    <string name="publish_create_room_failed">创建房间失败</string>
    <string name="publish_upload_cover_failed">上传封面失败</string>
    <string name="publish_photo_success">发布图片成功</string>
    <string name="text_continue">继续</string>
    <string name="text_publish">开始直播</string>
    <string name="text_live_preview">发布直播</string>
    <string name="text_photo_preview">发布照片</string>
    <string name="text_live_title_input">给直播写个标题吧</string>
    <string name="text_photo_title_input">你的照片你做主</string>
    <string name="text_live_open_lbs">开启位置</string>
    <string name="text_live_close_lbs">不显示地理位置</string>
    <string name="text_live_record_scr">启动录屏</string>
    <string name="text_live_not_record_scr">不启动录屏</string>
    <string name="text_live_location">正在定位中</string>
    <string name="text_live_lbs_fail">定位失败</string>
    <string name="text_live_lbs_unknown">不显示地理位置</string>
    <string name="text_live_default_title">我的直播我做主</string>
    <string name="text_start_push">开启推流</string>
    <string name="text_start_screen_record">启动录屏</string>
    <string name="text_record_info">开始录制后直播视频自动录制，并可以进行回放</string>
    <string name="text_live_all_see">所有人可看</string>
    <string name="text_live_share">同步到</string>
    <string name="text_live">正在直播>></string>
    <string name="text_live_add_title_tips">给你的直播设置一个满意的封面</string>
    <string name="text_live_admire_limit">点赞过于频繁</string>
    <string name="tip_no_permission">权限不足</string>
    <string name="host_sign">我的签名就是把我的世界直播给你们</string>
    <string name="host_phone">iPhone6S Plus</string>
    <string name="host_funs">粉丝数:9090</string>
    <string name="host_follow">关注:7089</string>
    <string name="host_admire">赞:11.3w</string>
    <string name="ping_ing">测速中</string>
    <string name="ping_progress">测速进度</string>
    <string name="ping_speed_test">网络测速</string>
    <string name="ping_start">开始测速</string>
    <string name="ping_no_server">获取测速列表失败，请稍后重试</string>
    <string name="ping_time">平均时延</string>
    <string name="ping_miss">丢包率</string>
    <string name="ping_cancel">取消</string>
    <string name="ping_TEL">电信</string>
    <string name="ping_CMCC">移动</string>
    <string name="ping_CNC">联通</string>
    <string name="ping_SH">上海</string>
    <string name="ping_SZ">深圳</string>
    <string name="ping_CD">成都</string>
    <string name="ping_TJ">天津</string>
    <string name="ping_NJ">南京</string>
    <string name="ping_HZ">杭州</string>
    <string name="ping_GZ">广州</string>
    <string name="loading">正在加载...</string>
    <string name="copy_success">复制成功</string>
    <string name="app_profit">我的收益</string>
    <string name="app_diamonds">我的金币</string>
    <string name="app_rz">申请认证</string>
    <string name="btn_set">设置</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="retrieve_password">找回密码</string>
    <string name="setting">设置</string>
    <string name="title_activity_profit">ProfitActivity</string>
    <string name="follow">关注的人</string>
    <string name="fansi">粉丝</string>
    <string name="sign">签名</string>
    <string name="shartitle">分享标题</string>
    <string name="lian_song">连送</string>
    <string name="send_gift">发送</string>
    <string name="app_level">我的等级</string>
    <string name="report">举报</string>
    <string name="platform_ticket">收入</string>
    <string name="private_chat">私信</string>
    <string name="main_page">主页</string>
    <string name="attention">关注</string>
    <string name="default_address">好像在火星</string>
    <string name="system_msg">我们提倡绿色直播,封面和直播内容含吸烟,低俗,引诱,暴露等都将会被封停账号,同时禁止直播聚众闹事,集会,网警24小时在线巡查哦!</string>
    <string name="dialog_input_danmu">开启弹幕，1钻/条</string>
    <string name="chat_up_finger">手指上滑，取消发送</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="chat_press_talk">按住 说话</string>
    <string name="chat_release_send">松开 结束</string>
    <string name="chat_image">图片</string>
    <string name="chat_file">文件</string>
    <string name="chat_photo">拍摄</string>
    <string name="chat_video">小视频</string>
    <string name="chat_audio_too_short">录音过短，请重试</string>
    <string name="chat_video_too_short">录制过短，请重试</string>
    <string name="chat_resend">重新发送</string>
    <string name="chat_del">删除</string>
    <string name="chat_save">保存</string>
    <string name="chat_file_too_large">文件过大，发送失败</string>
    <string name="chat_file_not_exist">文件不存在，发送失败</string>
    <string name="chat_image_preview_title">图片预览</string>
    <string name="chat_image_preview_send">发送</string>
    <string name="chat_image_preview_load_err">图片加载失败</string>
    <string name="chat_image_preview_ori">原图发送</string>
    <string name="time_yesterday">昨天</string>
    <string name="time_day">日</string>
    <string name="time_month">月</string>
    <string name="time_year">年</string>
    <string name="time_more">99+</string>
    <string name="title_activity_group_chat_setting">GroupChatSettingActivity</string>
    <string name="chat_content_bad">内容含有敏感词汇</string>
    <string name="R.string.chat_typing">对方正在输入...</string>
    <string name="conversation_draft">[草稿]</string>
    <string name="summary_image">[图片]</string>
    <string name="summary_voice">[语音]</string>
    <string name="summary_video">[小视频]</string>
    <string name="summary_file">[文件]</string>
    <string name="summary_friend_add">请求添加好友</string>
    <string name="summary_friend_added">我已添加</string>
    <string name="summary_friend_add_me">请求添加</string>
    <string name="summary_friend_recommend">推荐添加</string>
    <string name="summary_me">我</string>
    <string name="summary_group_apply">申请加群</string>
    <string name="summary_group_invite">邀请</string>
    <string name="summary_group_add">加入群</string>
    <string name="summary_agree">同意</string>
    <string name="summary_disagree">拒绝</string>
    <string name="summary_invite_person">邀请人</string>
    <string name="summary_handle_person">处理人</string>
    <string name="summary_group_admin_change">管理员变更</string>
    <string name="summary_group_info_change">群资料变更</string>
    <string name="summary_group_mem_change">群成员变更</string>
    <string name="summary_group_mem_add">加入群</string>
    <string name="summary_group_mem_quit">退出群</string>
    <string name="summary_group_mem_kick">被踢出群</string>
    <string name="summary_group_mem_modify">资料变更</string>
    <string name="conversation_system">系统消息</string>
    <string name="conversation_system_friend">新朋友</string>
    <string name="conversation_system_group">群组消息</string>
    <string name="conversation_del">删除会话</string>
    <string name="change_pass">修改密码</string>
</resources>