<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="contentDescription"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:scaleType="centerCrop"
        android:id="@+id/iv_publish_setting_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/toppanel1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorBackground"
        android:gravity="center_vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text_live_preview"
            android:textSize="@dimen/h10" />

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:onClick="onClick"
            android:text="@string/btn_cancel"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="140dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toppanel1"
        android:orientation="vertical"
        android:id="@+id/xml_push_title">

        <FrameLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/cover"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:scaleType="fitXY"
                android:onClick="onClick" />
            <TextView
                android:id="@+id/tv_pic_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:drawableTop="@drawable/image"
                android:drawablePadding="5dp"
                android:textColor="@color/colorTextG2"
                android:text="@string/text_live_add_title_tips"
                android:textSize="16sp"
                />
        </FrameLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/live_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/text_live_title_input"
                android:maxLength="32"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/text_size_30" />

            <LinearLayout
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:scaleType="center"
                    android:onClick="onClick"
                    android:id="@+id/iv_publish_setting_qq"
                    android:src="@drawable/q1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <ImageView
                    android:scaleType="center"
                    android:onClick="onClick"
                    android:id="@+id/iv_publish_setting_kj"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/k1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <ImageView
                    android:scaleType="center"
                    android:onClick="onClick"
                    android:id="@+id/iv_publish_setting_wx"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/w1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <ImageView
                    android:scaleType="center"
                    android:onClick="onClick"
                    android:id="@+id/iv_publish_setting_pyq"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/p1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
            </LinearLayout>

            <com.qiji.live.xiaozhibo.widget.ShapeButton
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                app:fillColor="@color/blue3"
                android:id="@+id/btn_publish"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/text_publish"
                android:textColor="@color/colorTextWhite"
                android:textSize="@dimen/h9"
                android:textStyle="bold"
                app:radius="80"/>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="onClick">

                <ImageView
                    android:id="@+id/img_lbs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/icon_lbs_off" />

                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/text_live_close_lbs"
                    android:textSize="@dimen/h6" />
            </LinearLayout>
        </LinearLayout>


        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="@color/colorTextWhite">



            <com.qiji.live.xiaozhibo.ui.customviews.TCCustomSwitch
                android:id="@+id/btn_lbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:src="@drawable/btn_switch_off" />
        </RelativeLayout>



        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorTextWhite">
            <RadioGroup
                android:id="@+id/rg_record_type"
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                    android:id="@+id/rb_record_camera"
                    android:text="摄像头直播"
                    android:layout_weight="1"
                    android:checked="true"
                    android:textColor="@color/colorTextG3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/rb_record_screen"
                    android:text="录屏直播"
                    android:layout_weight="1"
                    android:textColor="@color/colorTextG3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </RelativeLayout>

        <!--<RelativeLayout-->
            <!--android:id="@+id/rl_orientation"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="30dp"-->
            <!--android:visibility="gone"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:background="@color/colorTextWhite">-->
            <!--<RadioGroup-->
                <!--android:id="@+id/rg_orientation"-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent">-->
                <!--<RadioButton-->
                    <!--android:id="@+id/rb_orientation_landscape"-->
                    <!--android:text="横屏录制"-->
                    <!--android:layout_weight="1"-->
                    <!--android:checked="true"-->
                    <!--android:textColor="@color/colorTextG3"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->

                <!--<RadioButton-->
                    <!--android:id="@+id/rb_orientation_vertical"-->
                    <!--android:text="竖屏录制"-->
                    <!--android:layout_weight="0.87"-->
                    <!--android:textColor="@color/colorTextG3"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->
            <!--</RadioGroup>-->
        <!--</RelativeLayout>-->

        <RelativeLayout
            android:id="@+id/rl_bitrate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:visibility="gone"
            android:layout_gravity="center_vertical"
            android:background="@color/colorTextWhite">
            <RadioGroup
                android:id="@+id/rg_bitrate"
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                    android:id="@+id/rb_bitrate_slow"
                    android:text="流畅"
                    android:layout_weight="1"
                    android:textColor="@color/colorTextG3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/rb_bitrate_normal"
                    android:text="高清"
                    android:layout_weight="1"
                    android:checked="true"
                    android:textColor="@color/colorTextG3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/rb_bitrate_fast"
                    android:text="超清"
                    android:layout_weight="0.3"
                    android:textColor="@color/colorTextG3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </RelativeLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/iv_publish_setting_back"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/icon_close"
        android:layout_width="20dp"
        android:layout_height="20dp"/>



</RelativeLayout>
